# voxelize-example

./: .gitignore  package.json  webpack.config.js
client/: index.html  index.js
server/: Cargo.toml
server/src/: main.rs
