[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.17.0", features = ["specs-derive", "serde"] }
voxelize = "0.4.1"

[profile.release]
codegen-units = 1
opt-level = 3

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native"]
